z-index fix

--- a/source/style.css
+++ b/source/style.css
@@ -146,6 +146,7 @@ h1 {
 }
 .sticky {
 	position: sticky;
+	z-index: 50;
 	top: 59px;
 }
 
